samples/_failures_safe/1761438025_9743bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29093568.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_29093568.c:195:5: error: expected identifier at end of input
  195 |     start->
      |     ^~~~~
./samples/SAFE/__tmp_29093568.c:195:5: error: expected declaration or statement at end of input
